deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manoit-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      run: manoit-nginx
  template:
    metadata:
      labels:
        run: manoit-nginx
    spec:
      containers:
      - image: nginx
        name: manoit-nginx
        ports:
        - containerPort: 80
