service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manoit-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: manoit-nginx
